@@ -3,6 +3,7 @@ system-config-printer (1.5.9-3) UNRELEASED; urgency=medium
   * Update Vcs fields for conversion to git
   * Add debian/gbp.conf
   * Bump Standards-Version to 4.1.2
+  * Bump debhelper compat to 11
 
  -- Jeremy Bicha <jbicha@debian.org>  Sat, 16 Dec 2017 19:27:32 -0500
 
